# self-query-rag

./: .gitignore  README.md  pyproject.toml
self_query_rag/config/: config.py  config.yaml
self_query_rag/dataloader/: dataloader.py
self_query_rag/notebooks/: 1_data_exploration.ipynb  2_self_query_langchain.ipynb  3_chroma_retriever.ipynb  4_self_query_prompt.ipynb
self_query_rag/query_constructor/: chains.py
self_query_rag/retriever/: embeddings.py  retriever.py
self_query_rag/utils/: utils.py
self_query_summarization/dataloader/: dataloader.py
self_query_summarization/notebooks/: 1_data_exploration.ipynb  2_self_query_langchain.ipynb  3_chroma_retriever.ipynb  4_self_query_prompt.ipynb
self_query_summarization/query_constructor/: chains.py  prompt.py
self_query_summarization/retriever/: retriever.py
self_query_summarization/utils/: utils.py
