[tool.poetry]
name = "self-query-summarization"
version = "0.1.0"
description = ""
authors = ["Francesco Battocchio <francesco.battocchio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.6,<3.11"
jupyter = "^1.0.0"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
langchain = "^0.1.9"
langchain-openai = "^0.0.8"
lark = "^1.1.9"
chromadb = "^0.4.24"
sentence-transformers = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
